--- a/team.html
+++ b/team.html
@@ -189,7 +189,7 @@
                 data-team="">
                 <img src="images/Ayesha.jpg" alt="Ayesha"
                     class="w-32 h-32 mx-auto rounded-full object-cover border-4 border-purple-400 mb-4" />
-                <h3 class="text-xl font-semibold text-purple-300">Aeysha Siddiqa</h3>
+                <h3 class="text-xl font-semibold text-purple-300">Ayesha Siddiqa</h3>
                 <p class="text-sm text-gray-300">Peer Mentor - 3rd year</p>
             </div>
 
