Added team member pictures

--- a/team.html
+++ b/team.html
@@ -75,9 +75,9 @@
 
             <!-- Dharmapuri Hiren Kumar -->
             <div class="team-card cursor-pointer bg-black bg-opacity-50 rounded-2xl p-6 backdrop-blur-md shadow-lg text-center hover:scale-105 transform transition"
-                data-name="Dharmapuri Hiren Kumar" data-role="General Secretary" data-image="images/team3.jpg"
+                data-name="Dharmapuri Hiren Kumar" data-role="General Secretary" data-image="images/hiren.jpg"
                 data-team="">
-                <img src="images/team3.jpg" alt="Dharmapuri Hiren Kumar"
+                <img src="images/hiren.jpg" alt="Dharmapuri Hiren Kumar"
                     class="w-32 h-32 mx-auto rounded-full object-cover border-4 border-purple-400 mb-4" />
                 <h3 class="text-xl font-semibold text-purple-300">Dharmapuri Hiren Kumar</h3>
                 <p class="text-sm text-gray-300">General Secretary</p>
@@ -165,9 +165,9 @@
 
             <!-- Het -->
             <div class="team-card cursor-pointer bg-black bg-opacity-50 rounded-2xl p-6 backdrop-blur-md shadow-lg text-center hover:scale-105 transform transition"
-                data-name="Het" data-role="Peer Mentor - 1st year" data-image="images/team12.jpg"
+                data-name="Het" data-role="Peer Mentor - 1st year" data-image="images/het.jpg"
                 data-team="">
-                <img src="images/team12.jpg" alt="Het"
+                <img src="images/het.jpg" alt="Het"
                     class="w-32 h-32 mx-auto rounded-full object-cover border-4 border-purple-400 mb-4" />
                 <h3 class="text-xl font-semibold text-purple-300">Het</h3>
                 <p class="text-sm text-gray-300">Peer Mentor - 1st year</p>
