Google forms sheets updated for event suggestions

--- a/bi-monthly.html
+++ b/bi-monthly.html
@@ -103,7 +103,7 @@
     <!-- CTA -->
     <section class="text-center py-16 fade-slide">
         <h2 class="text-2xl md:text-3xl text-white mb-4">Want to suggest a bi-monthly activity?</h2>
-        <a href="register/index.html" target="_blank"
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeYhOG_hRpC1rj4ApfiMwO5sdzAPEvdJSAh_U2iD3WHUOEEgg/viewform?usp=sharing&ouid=106538382697363163144" target="_blank"
             class="px-6 py-3 bg-purple-600 text-white rounded-full hover:bg-purple-700 transition">Share Your Idea</a>
     </section>
 
