--- a/colloquims.html
+++ b/colloquims.html
@@ -51,7 +51,7 @@
     </div>
 
     <!-- Param Colloquium Section -->
-    <section class="relative z-10 p-6 sm:p-12 text-white">
+    <!-- <section class="relative z-10 p-6 sm:p-12 text-white">
         <div class="max-w-4xl mx-auto bg-black bg-opacity-40 backdrop-blur-md rounded-xl shadow-lg p-6 sm:p-10">
             <h2 class="text-3xl sm:text-4xl font-bold text-green-300 mb-2">🧠 Param</h2>
             <p class="text-gray-400 mb-2">📅 Date: <span class="font-semibold">1st August 2025</span></p>
@@ -93,7 +93,11 @@
                 </p>
             </div>
         </div>
-    </section>
+    </section> -->
+
+    <div class="max-w-4xl mx-auto bg-black bg-opacity-40 backdrop-blur-md rounded-xl shadow-lg p-6 sm:p-10">
+        <p>The colloquims will be announced shortly...</p>
+    </div>
 
     <!-- Footer -->
     <footer class="text-center text-sm text-gray-400 py-4 bg-black bg-opacity-30 backdrop-blur mt-auto">
