--- a/colloquims.html
+++ b/colloquims.html
@@ -51,8 +51,17 @@
     </div>
 
     <!-- Param Colloquium Section -->
-    <!-- <section class="relative z-10 p-6 sm:p-12 text-white">
-        <div class="max-w-4xl mx-auto bg-black bg-opacity-40 backdrop-blur-md rounded-xl shadow-lg p-6 sm:p-10">
+    <section class="relative z-10 p-6 sm:p-12 text-white">
+        <!-- Upcoming Colloquiums -->
+        <section class="relative z-10 p-6 sm:p-12 text-white">
+            <div
+                class="max-w-4xl mx-auto bg-black bg-opacity-40 backdrop-blur-md rounded-xl shadow-lg p-6 sm:p-10 mb-6">
+                <h2 class="text-3xl sm:text-4xl font-bold text-yellow-300 mb-4">🌟 Upcoming Colloquiums</h2>
+                <p class="text-gray-300">Stay tuned! Exciting talks and sessions will be announced soon.</p>
+            </div>
+        </section>
+
+        <!-- <div class="max-w-4xl mx-auto bg-black bg-opacity-40 backdrop-blur-md rounded-xl shadow-lg p-6 sm:p-10">
             <h2 class="text-3xl sm:text-4xl font-bold text-green-300 mb-2">🧠 Param</h2>
             <p class="text-gray-400 mb-2">📅 Date: <span class="font-semibold">1st August 2025</span></p>
             <p class="text-gray-400 mb-4">📍 Venue: <span class="font-semibold">PG AV room</span></p>
@@ -92,12 +101,22 @@
                         learned</span>.
                 </p>
             </div>
-        </div>
-    </section> -->
+        </div> -->
+    </section>
 
-    <div class="max-w-4xl mx-auto bg-black bg-opacity-40 backdrop-blur-md rounded-xl shadow-lg p-6 sm:p-10">
-        <p>The colloquims will be announced shortly...</p>
-    </div>
+    <!-- Completed Colloquiums -->
+    <section class="relative z-10 p-6 sm:p-12 text-white">
+        <div class="max-w-4xl mx-auto bg-black bg-opacity-40 backdrop-blur-md rounded-xl shadow-lg p-6 sm:p-10 mb-6">
+            <h2 class="text-3xl sm:text-4xl font-bold text-green-300 mb-4">📚 Completed Colloquiums</h2>
+        </div>
+
+        <div class="glass p-6 rounded-xl shadow-md text-left">
+            <h2 class="text-2xl font-bold text-purple-200 mb-3">PARAM</h2>
+            <ul class="text-gray-300 space-y-2">
+                <li><strong>Aug 1 2025</strong></li>
+            </ul>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="text-center text-sm text-gray-400 py-4 bg-black bg-opacity-30 backdrop-blur mt-auto">
