--- a/calender.html
+++ b/calender.html
@@ -42,7 +42,7 @@
             <li><a href="events.html">Events</a></li>
             <li><a href="achievements.html">Achievements</a></li>
             <li><a href="team.html">Team</a></li>
-            <li><a href="bi-monthly.html">Bi monthly events</a></li>
+            <li><a href="bi-monthly.html">Dual monthly events</a></li>
             <li><a href="colloquims.html">Friday Colloquims</a></li>
         </ul>
     </div>
