changes in calender and removal of recent dual monthly

--- a/calender.html
+++ b/calender.html
@@ -67,6 +67,7 @@
                 <h2 class="text-2xl font-bold text-purple-200 mb-3">August 2025</h2>
                 <ul class="text-gray-300 space-y-2">
                     <li><strong>Aug 1:</strong> Param (Colloquims)</li>
+                    <li><strong>Aug 8:</strong> The Cross Circuit (Dual monthly)</li>
                 </ul>
             </div>
 
