--- a/bi-monthly.html
+++ b/bi-monthly.html
@@ -81,7 +81,7 @@
     </section>
 
     <!-- Events -->
-    <section class="px-4 py-10 fade-slide">
+    <!-- <section class="px-4 py-10 fade-slide">
         <div class="flex flex-wrap justify-center gap-6">
             <div class="glass p-4 rounded-lg shadow-lg cursor-pointer event-card flex flex-col justify-center items-start"
                 data-image="images/cross-circuit.jpg">
@@ -89,7 +89,7 @@
                 <p class="text-gray-300 mt-1 text-sm">August 8, 2025 – 1 PM – N101</p>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Modal -->
     <div id="event-modal"
@@ -97,9 +97,13 @@
         <div class="relative flex items-center justify-center">
             <button id="close-modal"
                 class="absolute top-3 right-3 text-white text-3xl font-bold hover:text-red-500 z-50">✖</button>
-            <img id="modal-image" src="images/cross-circuit.jpg" alt="Event Poster"
+            <img id="modal-image" src="images/" alt="Event Poster"
                 class="object-contain rounded-lg shadow-lg" />
         </div>
+    </div>
+
+    <div class="relative flex items-center justify-center">
+        <p>The event will be posted soon, stay tuned...</p>
     </div>
 
     <!-- CTA -->
