--- a/achievements.html
+++ b/achievements.html
@@ -45,6 +45,7 @@
             <li><a href="team.html">Team</a></li>
             <li><a href="bi-monthly.html">Dual monthly events</a></li>
             <li><a href="colloquims.html">Friday Colloquims</a></li>
+            <li><a href="games.html">Games</a></li>
         </ul>
     </div>
 
@@ -87,7 +88,8 @@
     </section>
 
     <!-- Footer -->
-    <footer class="text-center text-sm text-gray-300 py-4 mt-10 glass backdrop-blur-md border-t border-gray-600 mt-auto">
+    <footer
+        class="text-center text-sm text-gray-300 py-4 mt-10 glass backdrop-blur-md border-t border-gray-600 mt-auto">
         © 2025 PSA – Physics Students' Association | St. Joseph’s University
     </footer>
 
