--- a/bi-monthly.html
+++ b/bi-monthly.html
@@ -69,6 +69,7 @@
             <li><a href="team.html">Team</a></li>
             <li><a href="bi-monthly.html">Dual monthly events</a></li>
             <li><a href="colloquims.html">Friday Colloquims</a></li>
+            <li><a href="games.html">Games</a></li>
         </ul>
     </div>
 
@@ -97,8 +98,7 @@
         <div class="relative flex items-center justify-center">
             <button id="close-modal"
                 class="absolute top-3 right-3 text-white text-3xl font-bold hover:text-red-500 z-50">✖</button>
-            <img id="modal-image" src="images/" alt="Event Poster"
-                class="object-contain rounded-lg shadow-lg" />
+            <img id="modal-image" src="images/" alt="Event Poster" class="object-contain rounded-lg shadow-lg" />
         </div>
     </div>
 
