--- a/events.html
+++ b/events.html
@@ -71,6 +71,7 @@
             <li><a href="team.html">Team</a></li>
             <li><a href="bi-monthly.html">Dual monthly events</a></li>
             <li><a href="colloquims.html">Friday Colloquiums</a></li>
+            <li><a href="games.html">Games</a></li>
         </ul>
     </div>
 
