--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <li><a href="team.html">Team</a></li>
             <li><a href="bi-monthly.html">Dual monthly events</a></li>
             <li><a href="colloquims.html">Friday Colloquims</a></li>
+            <li><a href="games.html">Games</a></li>
         </ul>
     </div>
 
@@ -112,7 +113,8 @@
         </ul>
     </div>
 
-    <div class="px-4 py-12 glass rounded mx-4 mb-10 bg-white bg-opacity-10 backdrop-blur-md shadow-md hover:scale-[1.03] text-center">
+    <div
+        class="px-4 py-12 glass rounded mx-4 mb-10 bg-white bg-opacity-10 backdrop-blur-md shadow-md hover:scale-[1.03] text-center">
         <p>Check out the menu page for calender, upcoming events and colloquims...</p>
     </div>
 
