--- a/bi-monthly.html
+++ b/bi-monthly.html
@@ -69,7 +69,7 @@
             <li><a href="team.html">Team</a></li>
             <li><a href="bi-monthly.html">Dual monthly events</a></li>
             <li><a href="colloquims.html">Friday Colloquims</a></li>
-            <li><a href="games.html">Games</a></li>
+            <li><a href="games/games.html">Games</a></li>
         </ul>
     </div>
 
