--- a/events.html
+++ b/events.html
@@ -14,7 +14,7 @@
         rel="stylesheet" />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css">
     <style>
         body {
             font-family: 'Crimson Text', serif;
@@ -71,7 +71,7 @@
             <li><a href="team.html">Team</a></li>
             <li><a href="bi-monthly.html">Dual monthly events</a></li>
             <li><a href="colloquims.html">Friday Colloquiums</a></li>
-            <li><a href="games.html">Games</a></li>
+            <li><a href="games/games.html">Games</a></li>
         </ul>
     </div>
 
