--- a/bi-monthly.html
+++ b/bi-monthly.html
@@ -82,15 +82,15 @@
     </section>
 
     <!-- Events -->
-    <!-- <section class="px-4 py-10 fade-slide">
+    <section class="px-4 py-10 fade-slide">
         <div class="flex flex-wrap justify-center gap-6">
             <div class="glass p-4 rounded-lg shadow-lg cursor-pointer event-card flex flex-col justify-center items-start"
-                data-image="images/cross-circuit.jpg">
-                <h3 class="text-lg font-bold text-white leading-tight">🧩 Cross Circuit</h3>
-                <p class="text-gray-300 mt-1 text-sm">August 8, 2025 – 1 PM – N101</p>
+                data-image="images/quantumhop.jpg">
+                <h3 class="text-lg font-bold text-white leading-tight">👟🏃‍♂️ QUANTUM HOP</h3>
+                <p class="text-gray-300 mt-1 text-sm">August 27, 2025 – 1 PM – N101</p>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- Modal -->
     <div id="event-modal"
@@ -98,13 +98,13 @@
         <div class="relative flex items-center justify-center">
             <button id="close-modal"
                 class="absolute top-3 right-3 text-white text-3xl font-bold hover:text-red-500 z-50">✖</button>
-            <img id="modal-image" src="images/" alt="Event Poster" class="object-contain rounded-lg shadow-lg" />
+            <img id="modal-image" src="images/quantumhop.jpg" alt="Event Poster" class="object-contain rounded-lg shadow-lg" />
         </div>
     </div>
 
-    <div class="relative flex items-center justify-center">
+    <!-- <div class="relative flex items-center justify-center">
         <p>The event will be posted soon, stay tuned...</p>
-    </div>
+    </div> -->
 
     <!-- CTA -->
     <section class="text-center py-16 fade-slide">
