calender updates, new achievements and removed dual monthly

--- a/achievements.html
+++ b/achievements.html
@@ -54,33 +54,39 @@
         <h2 class="text-3xl md:text-4xl text-center font-bold mb-12">Achievements</h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10 max-w-6xl mx-auto">
 
-            <!-- Example Card -->
-            <!-- <div class="bg-black bg-opacity-40 backdrop-blur-md p-6 rounded-2xl shadow-lg">
-                <h3 class="text-xl font-semibold text-purple-300 mb-2">1st Place in National Science Fest</h3>
-                <p class="text-sm text-gray-300">Our team won the 1st prize at the NS Fest 2025 for presenting
-                    innovative research on Plasma Physics.</p>
-                <span class="block mt-2 text-xs text-gray-400">March 2025</span>
-            </div> -->
+            <!-- Eureka 2024 Winners -->
+            <div class="bg-black bg-opacity-40 backdrop-blur-md p-6 rounded-2xl shadow-lg">
+                <img src="images/eureka2024/eureka2024.jpg" alt="Eureka 2024 Winners" class="rounded-lg mb-4 shadow-md">
+                <h3 class="text-xl font-semibold text-purple-300 mb-2">Winners – Eureka 2024</h3>
+                <p class="text-sm text-gray-300">
+                    Our team won 1st place at <strong>Eureka 2024</strong>, showcasing groundbreaking performance in
+                    physics.
+                </p>
+                <span class="block mt-2 text-xs text-gray-400">August 2024</span>
+            </div>
 
-            <!-- Copy and customize more cards as needed -->
-            <!-- <div class="bg-black bg-opacity-40 backdrop-blur-md p-6 rounded-2xl shadow-lg">
-                <h3 class="text-xl font-semibold text-purple-300 mb-2">Publication in Physics Today</h3>
-                <p class="text-sm text-gray-300">Our undergraduate research on Quantum Materials was featured in the
-                    April 2025 issue of Physics Today.</p>
-                <span class="block mt-2 text-xs text-gray-400">April 2025</span>
-            </div> -->
+            <!-- Eureka 2025 Winners -->
+            <div class="bg-black bg-opacity-40 backdrop-blur-md p-6 rounded-2xl shadow-lg">
+                <img src="images/eureka2025/eureka2025.jpg" alt="Eureka 2025 Winners" class="rounded-lg mb-4 shadow-md">
+                <h3 class="text-xl font-semibold text-purple-300 mb-2">Winners – Eureka 2025</h3>
+                <p class="text-sm text-gray-300">
+                    Back-to-back champions! PSA secured victory at <strong>Eureka 2025</strong>, marking three consecutive
+                    wins.
+                </p>
+                <span class="block mt-2 text-xs text-gray-400">August 2025</span>
+            </div>
 
+            <!-- 3 Trophy Streak -->
+            <div class="bg-black bg-opacity-40 backdrop-blur-md p-6 rounded-2xl shadow-lg">
+                <img src="images/eureka2025/3 consecutive eureka wins.jpg" alt="Three Consecutive Trophies" class="rounded-lg mb-4 shadow-md">
+                <h3 class="text-xl font-semibold text-purple-300 mb-2">Three-Time Consecutive Champions</h3>
+                <p class="text-sm text-gray-300">
+                    Celebrating <strong>three consecutive championship wins</strong> – a historic streak for PSA!
+                </p>
+                <span class="block mt-2 text-xs text-gray-400">2023 – 2025</span>
+            </div>
 
-            <!-- Copy and customize more cards as needed -->
-            <!-- <div class="bg-black bg-opacity-40 backdrop-blur-md p-6 rounded-2xl shadow-lg">
-                <h3 class="text-xl font-semibold text-purple-300 mb-2">Publication in Physics Today</h3>
-                <p class="text-sm text-gray-300">Our undergraduate research on Quantum Materials was featured in the
-                    April 2025 issue of Physics Today.</p>
-                <span class="block mt-2 text-xs text-gray-400">April 2025</span>
-            </div> -->
-
-
-            <!-- Placeholder -->
+            <!-- Placeholder (optional, you can remove if not needed) -->
             <div class="bg-black bg-opacity-30 backdrop-blur-md p-6 rounded-2xl shadow-lg text-gray-400 italic">
                 More achievements will be updated here soon...
             </div>
