--- a/bi-monthly.html
+++ b/bi-monthly.html
@@ -82,7 +82,7 @@
     </section>
 
     <!-- Events -->
-    <section class="px-4 py-10 fade-slide">
+    <!-- <section class="px-4 py-10 fade-slide">
         <div class="flex flex-wrap justify-center gap-6">
             <div class="glass p-4 rounded-lg shadow-lg cursor-pointer event-card flex flex-col justify-center items-start"
                 data-image="images/quantumhop.jpg">
@@ -90,7 +90,7 @@
                 <p class="text-gray-300 mt-1 text-sm">August 27, 2025 – 1 PM – N101</p>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Modal -->
     <div id="event-modal"
@@ -102,9 +102,9 @@
         </div>
     </div>
 
-    <!-- <div class="relative flex items-center justify-center">
+    <div class="relative flex items-center justify-center">
         <p>The event will be posted soon, stay tuned...</p>
-    </div> -->
+    </div>
 
     <!-- CTA -->
     <section class="text-center py-16 fade-slide">
