--- a/calender.html
+++ b/calender.html
@@ -69,6 +69,7 @@
                 <ul class="text-gray-300 space-y-2">
                     <li><strong>Aug 1:</strong> Param (Colloquims)</li>
                     <li><strong>Aug 8:</strong> The Cross Circuit (Dual monthly)</li>
+                    <li><strong>Aug 27:</strong> Quantum Hop (Dual monthly)</li>
                 </ul>
             </div>
 
@@ -76,6 +77,7 @@
                 <h2 class="text-2xl font-bold text-purple-200 mb-3">September 2025</h2>
                 <ul class="text-gray-300 space-y-2">
                     <li><strong>Sep 2:</strong> QUANTA</li>
+                    <li><strong>Sep 2:</strong> Physics Face-Off (Dual monthly)</li>
                 </ul>
             </div>
 
