--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
         <h2 class="text-3xl mb-4 border-b border-gray-400 pb-2">🏆 Achievements</h2>
         <ul class="list-disc ml-6 text-lg space-y-2">
             <li>Noesis</li>
+            <li>Eureka</li>
             <li>One of the oldest associations</li>
         </ul>
     </div>
