added new dual monthly to calender and page

--- a/calender.html
+++ b/calender.html
@@ -78,6 +78,7 @@
                 <ul class="text-gray-300 space-y-2">
                     <li><strong>Sep 2:</strong> QUANTA</li>
                     <li><strong>Sep 2:</strong> Physics Face-Off (Dual monthly)</li>
+                    <li><strong>Sep 26:</strong> Cosmos (Dual monthly)</li>
                 </ul>
             </div>
 
