added leaderboards for both dual monthly and main events

--- a/bi-monthly.html
+++ b/bi-monthly.html
@@ -81,13 +81,119 @@
         </p>
     </section>
 
-    <!-- Events -->
+    <!-- Events
     <section class="px-4 py-10 fade-slide">
         <div class="flex flex-wrap justify-center gap-6">
             <div class="glass p-4 rounded-lg shadow-lg cursor-pointer event-card flex flex-col justify-center items-start"
                 data-image="images/cosmos.jpg">
                 <h3 class="text-lg font-bold text-white leading-tight">🌌💫 COSMOS</h3>
                 <p class="text-gray-300 mt-1 text-sm">September 26, 2025 - 1 PM - N101</p>
+            </div>
+        </div>
+    </section> -->
+
+    <div class="relative flex items-center justify-center">
+        <p>The event will be posted soon, stay tuned...</p>
+    </div>
+
+    <!-- ===================== 🏆 LEADERBOARD SECTION ===================== -->
+    <section id="leaderboard" class="px-4 py-16 bg-black bg-opacity-40 text-white fade-slide">
+        <h2 class="text-3xl md:text-4xl font-bold text-center mb-10 text-purple-300">🏆 Event Leaderboards</h2>
+
+        <!-- Cross Circuit -->
+        <div class="max-w-4xl mx-auto mb-12">
+            <h3 class="text-2xl font-semibold text-center mb-4">⚡ Cross Circuit</h3>
+            <div class="overflow-x-auto">
+                <table class="table-auto w-full text-left border border-gray-600">
+                    <thead>
+                        <tr class="bg-purple-700 text-white">
+                            <th class="px-4 py-2">Position</th>
+                            <th class="px-4 py-2">Winner(s)</th>
+                        </tr>
+                    </thead>
+                    <tbody class="text-gray-200">
+                        <tr class="border-t border-gray-600">
+                            <td class="px-4 py-2 font-bold">First Place</td>
+                            <td class="px-4 py-2">
+                                D. Hiren Kumar - 242PCM01<br>
+                                Mathew Saji - 242MEC69<br>
+                                242MEC49
+                            </td>
+                        </tr>
+                        <tr class="border-t border-gray-600">
+                            <td class="px-4 py-2 font-bold">Second Place</td>
+                            <td class="px-4 py-2">
+                                TEJAS P – 242PMCB58<br>
+                                SANTHOSH – 242PMCB22<br>
+                                VISHNUVARDHAN – 252PMCB13
+                            </td>
+                        </tr>
+                        <tr class="border-t border-gray-600">
+                            <td class="px-4 py-2 font-bold">Third Place</td>
+                            <td class="px-4 py-2">
+                                SAIF K NYSAL – 252PCM19<br>
+                                SHRISTI – 242PEM06<br>
+                                NEEL MAHAJAN – 252PMC04
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Kahoot -->
+        <div class="max-w-4xl mx-auto mb-12">
+            <h3 class="text-2xl font-semibold text-center mb-4">🎯 Kahoot</h3>
+            <div class="overflow-x-auto">
+                <table class="table-auto w-full text-left border border-gray-600">
+                    <thead>
+                        <tr class="bg-purple-700 text-white">
+                            <th class="px-4 py-2">Position</th>
+                            <th class="px-4 py-2">Winner</th>
+                        </tr>
+                    </thead>
+                    <tbody class="text-gray-200">
+                        <tr class="border-t border-gray-600">
+                            <td class="px-4 py-2 font-bold">First Place</td>
+                            <td class="px-4 py-2">Dharmapuri Hiren Kumar</td>
+                        </tr>
+                        <tr class="border-t border-gray-600">
+                            <td class="px-4 py-2 font-bold">Second Place</td>
+                            <td class="px-4 py-2">Madhurya Sen</td>
+                        </tr>
+                        <tr class="border-t border-gray-600">
+                            <td class="px-4 py-2 font-bold">Third Place</td>
+                            <td class="px-4 py-2">David John</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Quantum Hop -->
+        <div class="max-w-4xl mx-auto">
+            <h3 class="text-2xl font-semibold text-center mb-4">🌀 Quantum Hop</h3>
+            <div class="overflow-x-auto">
+                <table class="table-auto w-full text-left border border-gray-600">
+                    <thead>
+                        <tr class="bg-purple-700 text-white">
+                            <th class="px-4 py-2">Position</th>
+                            <th class="px-4 py-2">Winner(s)</th>
+                        </tr>
+                    </thead>
+                    <tbody class="text-gray-200">
+                        <tr class="border-t border-gray-600">
+                            <td class="px-4 py-2 font-bold">First Place</td>
+                            <td class="px-4 py-2">
+                                Dharmapuri Hiren Kumar<br>
+                                Leema Rani GS<br>
+                                Arushi<br>
+                                Het<br>
+                                Spandana Kulkarni
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </section>
@@ -98,13 +204,10 @@
         <div class="relative flex items-center justify-center">
             <button id="close-modal"
                 class="absolute top-3 right-3 text-white text-3xl font-bold hover:text-red-500 z-50">✖</button>
-            <img id="modal-image" src="images/cosmos.jpg" alt="Event Poster" class="object-contain rounded-lg shadow-lg" />
+            <img id="modal-image" src="images/cosmos.jpg" alt="Event Poster"
+                class="object-contain rounded-lg shadow-lg" />
         </div>
     </div>
-
-    <!-- <div class="relative flex items-center justify-center">
-        <p>The event will be posted soon, stay tuned...</p>
-    </div> -->
 
     <!-- CTA -->
     <section class="text-center py-16 fade-slide">
