--- a/events.html
+++ b/events.html
@@ -178,6 +178,166 @@
         </div>
     </div>
 
+    <!-- ===================== 🏆 QUANTA 2025 Winners ===================== -->
+    <section id="quanta-winners" class="px-4 md:px-20 py-16 bg-black bg-opacity-40 text-white fade-slide">
+        <h2 class="text-3xl md:text-4xl font-bold text-center mb-10 text-purple-300">🏆 QUANTA 2025 – Winners List</h2>
+
+        <!-- Quiz -->
+        <div class="max-w-5xl mx-auto mb-12">
+            <h3 class="text-2xl font-semibold text-center mb-4">🧠 Event: Quiz</h3>
+            <div class="overflow-x-auto">
+                <table class="table-auto w-full text-left border border-gray-600">
+                    <thead class="bg-purple-700 text-white">
+                        <tr>
+                            <th class="px-4 py-2">Position</th>
+                            <th class="px-4 py-2">Team / Winners</th>
+                        </tr>
+                    </thead>
+                    <tbody class="text-gray-200">
+                        <tr class="border-t border-gray-600">
+                            <td class="px-4 py-2 font-bold">1st Place – Team 3</td>
+                            <td class="px-4 py-2">
+                                Disha – 232PM32<br>
+                                Soujanya – 232PM40<br>
+                                Hiren – 242PCM01
+                            </td>
+                        </tr>
+                        <tr class="border-t border-gray-600">
+                            <td class="px-4 py-2 font-bold">2nd Place – Team 2</td>
+                            <td class="px-4 py-2">
+                                Samanwita – 232PM19<br>
+                                Sweekriti – 232PM01<br>
+                                Preeta – 232PM14
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Movie Physics -->
+        <div class="max-w-5xl mx-auto mb-12">
+            <h3 class="text-2xl font-semibold text-center mb-4">🎬 Event: Movie Physics</h3>
+            <div class="overflow-x-auto">
+                <table class="table-auto w-full text-left border border-gray-600">
+                    <thead class="bg-purple-700 text-white">
+                        <tr>
+                            <th class="px-4 py-2">Position</th>
+                            <th class="px-4 py-2">Team / Winners</th>
+                        </tr>
+                    </thead>
+                    <tbody class="text-gray-200">
+                        <tr class="border-t border-gray-600">
+                            <td class="px-4 py-2 font-bold">1st Place – Team AD</td>
+                            <td class="px-4 py-2">
+                                Aditya – 242PEM03<br>
+                                Dhanush – 242PCM03
+                            </td>
+                        </tr>
+                        <tr class="border-t border-gray-600">
+                            <td class="px-4 py-2 font-bold">2nd Place – Team Complex</td>
+                            <td class="px-4 py-2">
+                                Aishwarya – 242PMCA13<br>
+                                Pushpan – 242PMCA48
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Auction -->
+        <div class="max-w-5xl mx-auto mb-12">
+            <h3 class="text-2xl font-semibold text-center mb-4">💰 Event: Auction</h3>
+            <div class="overflow-x-auto">
+                <table class="table-auto w-full text-left border border-gray-600">
+                    <thead class="bg-purple-700 text-white">
+                        <tr>
+                            <th class="px-4 py-2">Position</th>
+                            <th class="px-4 py-2">Winners</th>
+                        </tr>
+                    </thead>
+                    <tbody class="text-gray-200">
+                        <tr class="border-t border-gray-600">
+                            <td class="px-4 py-2 font-bold">1st Place</td>
+                            <td class="px-4 py-2">
+                                Pushpalatha – 232PM37<br>
+                                Divya – 232PM12
+                            </td>
+                        </tr>
+                        <tr class="border-t border-gray-600">
+                            <td class="px-4 py-2 font-bold">2nd Place</td>
+                            <td class="px-4 py-2">
+                                Leema Rani GS – 242PMCB44<br>
+                                Dharmapuri Hiren Kumar – 242PCM01
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Blackout (Escape Room) -->
+        <div class="max-w-5xl mx-auto mb-12">
+            <h3 class="text-2xl font-semibold text-center mb-4">🕵️‍♂️ Event: Blackout (Escape Room)</h3>
+            <div class="overflow-x-auto">
+                <table class="table-auto w-full text-left border border-gray-600">
+                    <thead class="bg-purple-700 text-white">
+                        <tr>
+                            <th class="px-4 py-2">Position</th>
+                            <th class="px-4 py-2">Winners</th>
+                        </tr>
+                    </thead>
+                    <tbody class="text-gray-200">
+                        <tr class="border-t border-gray-600">
+                            <td class="px-4 py-2 font-bold">1st Place</td>
+                            <td class="px-4 py-2">
+                                Het – 252PCM26<br>
+                                Arushi – 242PCM07<br>
+                                Alan Richard G – 252PCM01
+                            </td>
+                        </tr>
+                        <tr class="border-t border-gray-600">
+                            <td class="px-4 py-2 font-bold">2nd Place</td>
+                            <td class="px-4 py-2">
+                                Ambika – 242PMCB25<br>
+                                Manashree – 242PMCB56<br>
+                                Niveditha – 242PMCB50<br>
+                                Tejas – 242PMCB58<br>
+                                Dashni – 242PMCB36
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Aircrash -->
+        <div class="max-w-5xl mx-auto">
+            <h3 class="text-2xl font-semibold text-center mb-4">✈️ Event: Aircrash</h3>
+            <div class="overflow-x-auto">
+                <table class="table-auto w-full text-left border border-gray-600">
+                    <thead class="bg-purple-700 text-white">
+                        <tr>
+                            <th class="px-4 py-2">Position</th>
+                            <th class="px-4 py-2">Winner</th>
+                        </tr>
+                    </thead>
+                    <tbody class="text-gray-200">
+                        <tr class="border-t border-gray-600">
+                            <td class="px-4 py-2 font-bold">1st Place</td>
+                            <td class="px-4 py-2">Amit Kumar Jindal – 222PM34</td>
+                        </tr>
+                        <tr class="border-t border-gray-600">
+                            <td class="px-4 py-2 font-bold">2nd Place</td>
+                            <td class="px-4 py-2">Suhasini – 242PMCB48</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </section>
+
     <!-- Call to Action -->
     <section class="text-center py-16 fade-slide">
         <h2 class="text-2xl md:text-3xl text-white mb-4">Want to suggest an event or comment on PSA?</h2>
