--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
         <h2 class="text-3xl mb-4 border-b border-gray-400 pb-2">🏆 Achievements</h2>
         <ul class="list-disc ml-6 text-lg space-y-2">
             <li>Noesis</li>
-            <li>Eureka</li>
+            <li>Eureka - 2023, 2024 and 2025</li>
+            <li>Three consecutive wins secured in Eureka - Physics Fest</li>
             <li>One of the oldest associations</li>
         </ul>
     </div>
