--- a/events.html
+++ b/events.html
@@ -86,82 +86,48 @@
     <section class="px-4 md:px-20 py-10 fade-slide">
         <h2 class="text-3xl font-semibold text-teal-200 mb-6">📡 Upcoming Events</h2>
         <div class="grid md:grid-cols-2 gap-6">
-            <!-- Event Card 1 -->
-            <!-- <div onclick="showEventDetails(
-  'Stellar Science Showdown',
-  `This is a detailed description of the Stellar Science Showdown. 
-  Participants will dive into questions about recent advances in physics and astronomy. 
-  It’s an engaging quiz with visual rounds, puzzles, and a chance to win exciting rewards.`,
-  'August 21, 2025',
-  'https://example.com/register1',
-  ['Astro Quiz (10 - 12)', 'Visual Round', 'Rapid Fire', 'Puzzle Solving', 'Astrology Fun Game', 'Open Floor Q&A'],
-  ['Max team size: 3', 'Time limit: 30 mins', 'No external devices allowed', 'Minimum team size: 2', 'All years allowed']
-)" class="cursor-pointer bg-gray-900 bg-opacity-80 p-6 rounded-xl border border-indigo-700 hover:border-indigo-400 hover:shadow-xl transition-all duration-300 transform hover:scale-105">
-                <h3 class="text-xl font-bold text-indigo-300 mb-2">Stellar Science Showdown</h3>
-                <p class="text-sm text-gray-400 mb-1">📅 August 21, 2025</p>
-                <p class="text-gray-200">Click to know more about this amazing quiz!</p>
-            </div> -->
 
+            <!-- NOESIS 2025 Event Card -->
+            <div onclick="showEventDetails(
+        'NOESIS 2025',
+        `NOESIS is the flagship physics fest organized by the Physics Students’ Association. 
+        A celebration of science, intellect, and curiosity - NOESIS brings together students 
+        from across disciplines for exciting challenges, thought-provoking quizzes, and many more . 
+        Join us in exploring the wonders of physics!`,
+        'November 26, 2025',
+        'https://noesisregistration.vercel.app',
+        ['Open for all PU students', 'Registration mandatory', 'Bring your student ID card', 'No mobile devices during events']
+      )" class="cursor-pointer bg-gradient-to-br from-indigo-900 via-purple-900 to-black bg-opacity-90 p-8 rounded-2xl border border-indigo-600 hover:border-indigo-300 hover:shadow-2xl transition-all duration-300 transform hover:scale-105">
+                <h3 class="text-2xl font-bold text-indigo-200 mb-2 text-center">NOESIS 2025</h3>
+                <p class="text-sm text-gray-400 mb-2 text-center">📅 Novemeber 26, 2025</p>
+                <p class="text-gray-100 text-center text-lg">Click to explore the Physics Fest of the Year!</p>
+            </div>
 
-            <!-- Event Card 2 -->
-            <!-- <div onclick="showEventDetails(
-  'Stellar Science Showdown',
-  `This is a detailed description of the Stellar Science Showdown. 
-  Participants will dive into questions about recent advances in physics and astronomy. 
-  It’s an engaging quiz with visual rounds, puzzles, and a chance to win exciting rewards.`,
-  'August 21, 2025',
-  'https://example.com/register1',
-  ['Astro Quiz (10 - 12)', 'Visual Round', 'Rapid Fire', 'Puzzle Solving', 'Astrology Fun Game', 'Open Floor Q&A'],
-  ['Max team size: 3', 'Time limit: 30 mins', 'No external devices allowed', 'Minimum team size: 2', 'All years allowed']
-)" class="cursor-pointer bg-gray-900 bg-opacity-80 p-6 rounded-xl border border-indigo-700 hover:border-indigo-400 hover:shadow-xl transition-all duration-300 transform hover:scale-105">
-                <h3 class="text-xl font-bold text-indigo-300 mb-2">Stellar Science Showdown</h3>
-                <p class="text-sm text-gray-400 mb-1">📅 August 21, 2025</p>
-                <p class="text-gray-200">Click to know more about this amazing quiz!</p>
-            </div> -->
-
-            <!-- Event Card 3 -->
-            <!-- <div onclick="showEventDetails(
-  'Stellar Science Showdown',
-  `This is a detailed description of the Stellar Science Showdown. 
-  Participants will dive into questions about recent advances in physics and astronomy. 
-  It’s an engaging quiz with visual rounds, puzzles, and a chance to win exciting rewards.`,
-  'August 21, 2025',
-  'https://example.com/register1',
-  ['Astro Quiz (10 - 12)', 'Visual Round', 'Rapid Fire', 'Puzzle Solving', 'Astrology Fun Game', 'Open Floor Q&A'],
-  ['Max team size: 3', 'Time limit: 30 mins', 'No external devices allowed', 'Minimum team size: 2', 'All years allowed']
-)" class="cursor-pointer bg-gray-900 bg-opacity-80 p-6 rounded-xl border border-indigo-700 hover:border-indigo-400 hover:shadow-xl transition-all duration-300 transform hover:scale-105">
-                <h3 class="text-xl font-bold text-indigo-300 mb-2">Stellar Science Showdown</h3>
-                <p class="text-sm text-gray-400 mb-1">📅 August 21, 2025</p>
-                <p class="text-gray-200">Click to know more about this amazing quiz!</p>
-            </div> -->
-            <p class="text-center">Stay Tuned. Coming soon...</p>
+            <!-- Placeholder -->
+            <!-- <p class="text-center col-span-1 md:col-span-2">Stay tuned for more exciting events...</p> -->
         </div>
     </section>
 
     <!-- Hidden Event Detail Section -->
     <div id="event-detail"
-        class="hidden p-8 bg-black bg-opacity-80 text-white absolute top-0 left-0 w-full min-h-screen z-50">
+        class="hidden p-8 bg-black bg-opacity-80 text-white fixed top-0 left-0 w-full min-h-screen z-50 overflow-auto">
+
+        <!-- Close Button -->
         <button onclick="closeEvent()" class="absolute top-4 right-6 text-white text-2xl">×</button>
+
+        <!-- Title and Date -->
         <h2 id="event-title" class="text-4xl font-bold text-center mb-2"></h2>
         <p id="event-date" class="text-center text-gray-400 mb-8"></p>
 
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+
             <!-- Left Column -->
             <div class="col-span-2">
+                <!-- Description -->
                 <h3 class="text-xl font-semibold mb-2 text-blue-300">📘 Description</h3>
-                <p id="event-description" class="mb-4"></p>
+                <p id="event-description" class="mb-6"></p>
 
-                <!-- Venue Section -->
-                <div id="event-venue-container" class="mb-4">
-                    <h3 class="text-xl font-semibold text-red-300 mb-2">📍 Venue</h3>
-                    <p id="event-venue" class="text-white"></p>
-                </div>
-
-                <div id="event-sub-events-container" class="mb-4">
-                    <h3 class="text-xl font-semibold text-purple-300 mb-2">🧩 Sub-events</h3>
-                    <ul id="event-sub-events" class="list-disc list-inside space-y-1 text-white"></ul>
-                </div>
-
+                <!-- Rules & Guidelines -->
                 <div id="event-rules-container">
                     <h3 class="text-xl font-semibold text-yellow-300 mb-2">📋 Rules & Guidelines</h3>
                     <ul id="event-rules" class="list-disc list-inside space-y-1 text-white"></ul>
@@ -171,9 +137,10 @@
             <!-- Right Column -->
             <div class="flex flex-col justify-center items-center">
                 <h3 class="text-xl font-semibold mb-2 text-green-300">📩 Register</h3>
-                <a id="event-link" href="forms/index.html" target="_blank"
-                    class="px-6 py-2 bg-green-500 hover:bg-green-600 text-white rounded shadow-md transition-all duration-300">Register
-                    Now</a>
+                <a id="event-link" href="#" target="_blank"
+                    class="px-6 py-3 bg-green-500 hover:bg-green-600 text-white rounded-lg shadow-md transition-all duration-300 text-lg">
+                    Register Now
+                </a>
             </div>
         </div>
     </div>
