advertising noesis in the home page

--- a/index.html
+++ b/index.html
@@ -59,6 +59,35 @@
         <p class="text-xl max-w-2xl">Unraveling the mysteries of the universe one equation at a time.</p>
     </header>
 
+    <!-- NOESIS 2025 Highlight Section -->
+    <section
+        class="relative z-20 px-6 md:px-20 py-16 text-center glass rounded-lg mx-4 mt-6 mb-10 bg-white bg-opacity-10 backdrop-blur-md shadow-lg transform hover:scale-[1.02] transition-all duration-300">
+        <div class="max-w-3xl mx-auto space-y-6">
+            <h2 class="text-4xl md:text-5xl font-bold text-indigo-200 drop-shadow-lg">
+                NOESIS 2025 is Coming!
+            </h2>
+            <p class="text-lg md:text-xl text-gray-200 leading-relaxed">
+                Brace yourself for <strong>NOESIS 2025</strong> - the flagship Physics Fest of the
+                <strong>Physics Students' Association</strong>.
+                A celebration of curiosity, intellect, and innovation.
+                Join us for interactive talks, challenges, and experiments that explore the universe of physics.
+            </p>
+
+            <div class="pt-2">
+                <a href="events.html"
+                    class="inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-semibold px-8 py-3 rounded-lg text-lg shadow-md transition-all duration-300 transform hover:scale-105">
+                    Explore NOESIS 2025
+                </a>
+            </div>
+        </div>
+
+        <!-- Optional soft glow background -->
+        <div
+            class="absolute inset-0 bg-gradient-to-b from-purple-500/10 via-transparent to-transparent pointer-events-none rounded-lg">
+        </div>
+    </section>
+
+
     <!-- PSA Description Section -->
     <div
         class="px-4 py-12 glass rounded-lg mx-4 mb-10 bg-white bg-opacity-10 backdrop-blur-md shadow-md hover:scale-[1.03] transform transition-all duration-300">
