--- a/events.html
+++ b/events.html
@@ -96,7 +96,7 @@
         Join us in exploring the wonders of physics!`,
         'November 27, 2025',
         'https://noesisregistration.vercel.app',
-        ['Open for all PU students', 'Registration mandatory', 'Bring your student ID card', 'No mobile devices during events']
+        ['Open for all students', 'Registration mandatory', 'Bring your student ID card', 'No mobile devices during events']
       )" class="cursor-pointer bg-gradient-to-br from-indigo-900 via-purple-900 to-black bg-opacity-90 p-8 rounded-2xl border border-indigo-600 hover:border-indigo-300 hover:shadow-2xl transition-all duration-300 transform hover:scale-105">
                 <h3 class="text-2xl font-bold text-indigo-200 mb-2 text-center">NOESIS 2025</h3>
                 <p class="text-sm text-gray-400 mb-2 text-center">📅 Novemeber 27, 2025</p>
