--- a/events.html
+++ b/events.html
@@ -13,8 +13,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Crimson+Text&display=swap"
         rel="stylesheet" />
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
     <style>
         body {
             font-family: 'Crimson Text', serif;
@@ -34,6 +32,10 @@
             height: 100%;
             background: rgba(5, 0, 20, 0.7);
             z-index: -1;
+        }
+
+        #event-detail {
+            backdrop-filter: blur(10px);
         }
     </style>
 </head>
@@ -88,222 +90,64 @@
         <div class="grid md:grid-cols-2 gap-6">
 
             <!-- NOESIS 2025 Event Card -->
-            <div onclick="showEventDetails(
-        'NOESIS 2025',
-        `NOESIS is the flagship physics fest organized by the Physics Students’ Association. 
-        A celebration of science, intellect, and curiosity - NOESIS brings together students 
-        from across disciplines for exciting challenges, thought-provoking quizzes, and many more . 
-        Join us in exploring the wonders of physics!`,
-        'November 26, 2025',
-        'https://noesisregistration.vercel.app',
-        ['Open for all PU students', 'Registration mandatory', 'Bring your student ID card', 'No mobile devices during events']
-      )" class="cursor-pointer bg-gradient-to-br from-indigo-900 via-purple-900 to-black bg-opacity-90 p-8 rounded-2xl border border-indigo-600 hover:border-indigo-300 hover:shadow-2xl transition-all duration-300 transform hover:scale-105">
-                <h3 class="text-2xl font-bold text-indigo-200 mb-2 text-center">NOESIS 2025</h3>
-                <p class="text-sm text-gray-400 mb-2 text-center">📅 Novemeber 26, 2025</p>
-                <p class="text-gray-100 text-center text-lg">Click to explore the Physics Fest of the Year!</p>
+            <div
+                class="bg-gradient-to-br from-indigo-900 via-purple-900 to-black bg-opacity-90 p-8 rounded-2xl border border-indigo-600 hover:border-indigo-300 hover:shadow-2xl transition-all duration-300 transform hover:scale-105 flex flex-col justify-between">
+                <div>
+                    <h3 class="text-2xl font-bold text-indigo-200 mb-2 text-center">NOESIS 2025</h3>
+                    <p class="text-sm text-gray-400 mb-3 text-center">📅 November 26, 2025 | 🕘 9:00 AM – 2:30 PM</p>
+                    <p class="text-gray-100 text-center mb-4 text-lg">
+                        The flagship physics fest of the year — where science, intellect, and curiosity collide.
+                    </p>
+                </div>
+                <div class="text-center">
+                    <button onclick="showEventDetails(
+            'NOESIS 2025',
+            `NOESIS is the flagship physics fest organized by the Physics Students’ Association.
+            A celebration of science, intellect, and curiosity — NOESIS brings together students
+            from across disciplines for exciting challenges, thought-provoking quizzes, and engaging discussions.
+            Join us in exploring the wonders of physics and innovation!`,
+            '📅 Date: November 26, 2025 | 🕘 9:00 AM – 2:30 PM | 📍 Venue: Auditorium Block, St. Joseph’s University',
+            'https://noesisregistration.vercel.app',
+            ['Open for all students', 'Registration mandatory', 'Bring your student ID card', 'No mobile devices during events']
+          )" class="inline-block px-6 py-2 bg-green-500 hover:bg-green-600 text-white rounded-lg font-semibold transition-all duration-300">
+                        🔗 Click to Register
+                    </button>
+                </div>
             </div>
-
-            <!-- Placeholder -->
-            <!-- <p class="text-center col-span-1 md:col-span-2">Stay tuned for more exciting events...</p> -->
         </div>
     </section>
 
     <!-- Hidden Event Detail Section -->
-    <div id="event-detail"
-        class="hidden p-8 bg-black bg-opacity-80 text-white fixed top-0 left-0 w-full min-h-screen z-50 overflow-auto">
+    <div id="event-detail" class="hidden fixed inset-0 bg-black bg-opacity-80 text-white z-50 p-8 overflow-auto">
+        <button onclick="closeEvent()" class="absolute top-4 right-6 text-white text-3xl hover:text-red-400">×</button>
 
-        <!-- Close Button -->
-        <button onclick="closeEvent()" class="absolute top-4 right-6 text-white text-2xl">×</button>
+        <div class="max-w-5xl mx-auto mt-8">
+            <h2 id="event-title" class="text-4xl font-bold text-center mb-2 text-purple-300"></h2>
+            <p id="event-date" class="text-center text-gray-400 mb-8"></p>
 
-        <!-- Title and Date -->
-        <h2 id="event-title" class="text-4xl font-bold text-center mb-2"></h2>
-        <p id="event-date" class="text-center text-gray-400 mb-8"></p>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <!-- Left Column -->
+                <div class="col-span-2">
+                    <h3 class="text-xl font-semibold mb-2 text-blue-300">📘 Description</h3>
+                    <p id="event-description" class="mb-6 leading-relaxed"></p>
 
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-
-            <!-- Left Column -->
-            <div class="col-span-2">
-                <!-- Description -->
-                <h3 class="text-xl font-semibold mb-2 text-blue-300">📘 Description</h3>
-                <p id="event-description" class="mb-6"></p>
-
-                <!-- Rules & Guidelines -->
-                <div id="event-rules-container">
-                    <h3 class="text-xl font-semibold text-yellow-300 mb-2">📋 Rules & Guidelines</h3>
-                    <ul id="event-rules" class="list-disc list-inside space-y-1 text-white"></ul>
+                    <div id="event-rules-container">
+                        <h3 class="text-xl font-semibold text-yellow-300 mb-2">📋 Rules & Guidelines</h3>
+                        <ul id="event-rules" class="list-disc list-inside space-y-1 text-white"></ul>
+                    </div>
                 </div>
-            </div>
 
-            <!-- Right Column -->
-            <div class="flex flex-col justify-center items-center">
-                <h3 class="text-xl font-semibold mb-2 text-green-300">📩 Register</h3>
-                <a id="event-link" href="#" target="_blank"
-                    class="px-6 py-3 bg-green-500 hover:bg-green-600 text-white rounded-lg shadow-md transition-all duration-300 text-lg">
-                    Register Now
-                </a>
+                <!-- Right Column -->
+                <div class="flex flex-col justify-center items-center text-center">
+                    <h3 class="text-xl font-semibold mb-2 text-green-300">📩 Register</h3>
+                    <a id="event-link" href="#" target="_blank"
+                        class="px-6 py-3 bg-green-500 hover:bg-green-600 text-white rounded-lg shadow-md transition-all duration-300 text-lg">
+                        Register Now
+                    </a>
+                </div>
             </div>
         </div>
     </div>
-
-    <!-- ===================== 🏆 QUANTA 2025 Winners ===================== -->
-    <section id="quanta-winners" class="px-4 md:px-20 py-16 bg-black bg-opacity-40 text-white fade-slide">
-        <h2 class="text-3xl md:text-4xl font-bold text-center mb-10 text-purple-300">🏆 QUANTA 2025 – Winners List</h2>
-
-        <!-- Quiz -->
-        <div class="max-w-5xl mx-auto mb-12">
-            <h3 class="text-2xl font-semibold text-center mb-4">🧠 Event: Quiz</h3>
-            <div class="overflow-x-auto">
-                <table class="table-auto w-full text-left border border-gray-600">
-                    <thead class="bg-purple-700 text-white">
-                        <tr>
-                            <th class="px-4 py-2">Position</th>
-                            <th class="px-4 py-2">Team / Winners</th>
-                        </tr>
-                    </thead>
-                    <tbody class="text-gray-200">
-                        <tr class="border-t border-gray-600">
-                            <td class="px-4 py-2 font-bold">1st Place – Team 3</td>
-                            <td class="px-4 py-2">
-                                Disha – 232PM32<br>
-                                Soujanya – 232PM40<br>
-                                Hiren – 242PCM01
-                            </td>
-                        </tr>
-                        <tr class="border-t border-gray-600">
-                            <td class="px-4 py-2 font-bold">2nd Place – Team 2</td>
-                            <td class="px-4 py-2">
-                                Samanwita – 232PM19<br>
-                                Sweekriti – 232PM01<br>
-                                Preeta – 232PM14
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
-        <!-- Movie Physics -->
-        <div class="max-w-5xl mx-auto mb-12">
-            <h3 class="text-2xl font-semibold text-center mb-4">🎬 Event: Movie Physics</h3>
-            <div class="overflow-x-auto">
-                <table class="table-auto w-full text-left border border-gray-600">
-                    <thead class="bg-purple-700 text-white">
-                        <tr>
-                            <th class="px-4 py-2">Position</th>
-                            <th class="px-4 py-2">Team / Winners</th>
-                        </tr>
-                    </thead>
-                    <tbody class="text-gray-200">
-                        <tr class="border-t border-gray-600">
-                            <td class="px-4 py-2 font-bold">1st Place – Team AD</td>
-                            <td class="px-4 py-2">
-                                Aditya – 242PEM03<br>
-                                Dhanush – 242PCM03
-                            </td>
-                        </tr>
-                        <tr class="border-t border-gray-600">
-                            <td class="px-4 py-2 font-bold">2nd Place – Team Complex</td>
-                            <td class="px-4 py-2">
-                                Aishwarya – 242PMCA13<br>
-                                Pushpan – 242PMCA48
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
-        <!-- Auction -->
-        <div class="max-w-5xl mx-auto mb-12">
-            <h3 class="text-2xl font-semibold text-center mb-4">💰 Event: Auction</h3>
-            <div class="overflow-x-auto">
-                <table class="table-auto w-full text-left border border-gray-600">
-                    <thead class="bg-purple-700 text-white">
-                        <tr>
-                            <th class="px-4 py-2">Position</th>
-                            <th class="px-4 py-2">Winners</th>
-                        </tr>
-                    </thead>
-                    <tbody class="text-gray-200">
-                        <tr class="border-t border-gray-600">
-                            <td class="px-4 py-2 font-bold">1st Place</td>
-                            <td class="px-4 py-2">
-                                Pushpalatha – 232PM37<br>
-                                Divya – 232PM12
-                            </td>
-                        </tr>
-                        <tr class="border-t border-gray-600">
-                            <td class="px-4 py-2 font-bold">2nd Place</td>
-                            <td class="px-4 py-2">
-                                Leema Rani GS – 242PMCB44<br>
-                                Dharmapuri Hiren Kumar – 242PCM01
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
-        <!-- Blackout (Escape Room) -->
-        <div class="max-w-5xl mx-auto mb-12">
-            <h3 class="text-2xl font-semibold text-center mb-4">🕵️‍♂️ Event: Blackout (Escape Room)</h3>
-            <div class="overflow-x-auto">
-                <table class="table-auto w-full text-left border border-gray-600">
-                    <thead class="bg-purple-700 text-white">
-                        <tr>
-                            <th class="px-4 py-2">Position</th>
-                            <th class="px-4 py-2">Winners</th>
-                        </tr>
-                    </thead>
-                    <tbody class="text-gray-200">
-                        <tr class="border-t border-gray-600">
-                            <td class="px-4 py-2 font-bold">1st Place</td>
-                            <td class="px-4 py-2">
-                                Het – 252PCM26<br>
-                                Arushi – 242PCM07<br>
-                                Alan Richard G – 252PCM01
-                            </td>
-                        </tr>
-                        <tr class="border-t border-gray-600">
-                            <td class="px-4 py-2 font-bold">2nd Place</td>
-                            <td class="px-4 py-2">
-                                Ambika – 242PMCB25<br>
-                                Manashree – 242PMCB56<br>
-                                Niveditha – 242PMCB50<br>
-                                Tejas – 242PMCB58<br>
-                                Dashni – 242PMCB36
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
-        <!-- Aircrash -->
-        <div class="max-w-5xl mx-auto">
-            <h3 class="text-2xl font-semibold text-center mb-4">✈️ Event: Aircrash</h3>
-            <div class="overflow-x-auto">
-                <table class="table-auto w-full text-left border border-gray-600">
-                    <thead class="bg-purple-700 text-white">
-                        <tr>
-                            <th class="px-4 py-2">Position</th>
-                            <th class="px-4 py-2">Winner</th>
-                        </tr>
-                    </thead>
-                    <tbody class="text-gray-200">
-                        <tr class="border-t border-gray-600">
-                            <td class="px-4 py-2 font-bold">1st Place</td>
-                            <td class="px-4 py-2">Amit Kumar Jindal – 222PM34</td>
-                        </tr>
-                        <tr class="border-t border-gray-600">
-                            <td class="px-4 py-2 font-bold">2nd Place</td>
-                            <td class="px-4 py-2">Suhasini – 242PMCB48</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </section>
 
     <!-- Call to Action -->
     <section class="text-center py-16 fade-slide">
