--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <p class="text-xl max-w-2xl">Unraveling the mysteries of the universe one equation at a time.</p>
     </header>
 
-    <!-- NOESIS 2025 Highlight Section -->
+    <!-- NOESIS 2025 Highlight Section
     <section
         class="relative z-20 px-6 md:px-20 py-16 text-center glass rounded-lg mx-4 mt-6 mb-10 bg-white bg-opacity-10 backdrop-blur-md shadow-lg transform hover:scale-[1.02] transition-all duration-300">
         <div class="max-w-3xl mx-auto space-y-6">
@@ -81,11 +81,11 @@
             </div>
         </div>
 
-        <!-- Optional soft glow background -->
-        <div
+        Optional soft glow background -->
+        <!-- <div
             class="absolute inset-0 bg-gradient-to-b from-purple-500/10 via-transparent to-transparent pointer-events-none rounded-lg">
         </div>
-    </section>
+    </section> -->
 
 
     <!-- PSA Description Section -->
