--- a/events.html
+++ b/events.html
@@ -105,12 +105,12 @@
     </section>
 
     <!-- Upcoming Events -->
-    <section class="px-4 sm:px-10 md:px-20 py-10">
+    <!-- <section class="px-4 sm:px-10 md:px-20 py-10">
         <h2 class="text-3xl font-semibold text-teal-200 mb-6 text-center md:text-left">📡 Upcoming Events</h2>
 
         <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 justify-items-center">
 
-            <!-- NOESIS 2025 Event Card -->
+            NOESIS 2025 Event Card
             <div
                 class="bg-gradient-to-br from-indigo-900 via-purple-900 to-black p-6 sm:p-8 rounded-2xl border border-indigo-600 hover:border-indigo-300 hover:shadow-2xl transition-all duration-300 transform hover:scale-105 flex flex-col justify-between w-full max-w-md">
                 <div>
@@ -137,6 +137,10 @@
             </div>
 
         </div>
+    </section> -->
+
+    <section class="text-center py-20 px-4">
+        <h3 mt-4 text-lg md:text-xl text-gray-300 max-w-2xl mx-auto>Exciting events are on the way - stay tuned!</h3>
     </section>
 
     <!-- Hidden Event Detail Section -->
