--- a/team.html
+++ b/team.html
@@ -137,7 +137,7 @@
             <!-- Tuhin -->
             <div class="team-card cursor-pointer bg-black bg-opacity-50 rounded-2xl p-6 backdrop-blur-md shadow-lg text-center hover:scale-105 transform transition"
                 data-name="Tuhin Adhikari" data-role="Technical Head" data-image="images/tuhin.jpeg"
-                data-team="Manoj S, Shrivathsa Rajagopal Chakravarthy, Aanishka Barua, Sathyaprasad Shenoy">
+                data-team="Manoj S, Shrivathsa Rajagopal Chakravarthy">
                 <img src="images/tuhin.jpeg" alt="Tuhin"
                     class="w-32 h-32 mx-auto rounded-full object-cover border-4 border-purple-400 mb-4" />
                 <h3 class="text-xl font-semibold text-purple-300">Tuhin Adhikari</h3>
