changed dates and self image

--- a/calender.html
+++ b/calender.html
@@ -82,12 +82,12 @@
                 </ul>
             </div>
 
-            <div class="glass p-6 rounded-xl shadow-md text-left">
+            <!-- <div class="glass p-6 rounded-xl shadow-md text-left">
                 <h2 class="text-2xl font-bold text-purple-200 mb-3">November 2025</h2>
                 <ul class="text-gray-300 space-y-2">
                     <li><strong>Nov 27:</strong> NOESIS</li>
                 </ul>
-            </div>
+            </div> -->
 
             <!-- <div class="glass p-6 rounded-xl shadow-md text-left">
                 <h2 class="text-2xl font-bold text-purple-200 mb-3">October 2025</h2>
