--- a/team.html
+++ b/team.html
@@ -136,9 +136,9 @@
 
             <!-- Tuhin -->
             <div class="team-card cursor-pointer bg-black bg-opacity-50 rounded-2xl p-6 backdrop-blur-md shadow-lg text-center hover:scale-105 transform transition"
-                data-name="Tuhin Adhikari" data-role="Technical Head" data-image="images/tuhin.jpeg"
+                data-name="Tuhin Adhikari" data-role="Technical Head" data-image="images/tuhin.jpg"
                 data-team="Manoj S, Shrivathsa Rajagopal Chakravarthy">
-                <img src="images/tuhin.jpeg" alt="Tuhin"
+                <img src="images/tuhin.jpg" alt="Tuhin"
                     class="w-32 h-32 mx-auto rounded-full object-cover border-4 border-purple-400 mb-4" />
                 <h3 class="text-xl font-semibold text-purple-300">Tuhin Adhikari</h3>
                 <p class="text-sm text-gray-300">Technical Head</p>
